archive/kubernetes/apps/default/adguardhome/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguardhome
  labels:
    app.kubernetes.io/part-of: adguardhome
    app.kubernetes.io/name: adguardhome
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/part-of: adguardhome
      app.kubernetes.io/name: adguardhome
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: adguardhome
        app.kubernetes.io/name: adguardhome
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: adguardhome-data
      containers:
        - name: adguardhome
          image: adguard/adguardhome:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 53
              protocol: TCP
              name: dnstcp
            - containerPort: 53
              protocol: UDP
              name: dnsdup
            - containerPort: 3000
              protocol: TCP
              name: http
          volumeMounts:
            - name: data
              mountPath: /opt/adguardhome/work
              subPath: work
            - name: data
              mountPath: /opt/adguardhome/conf
              subPath: conf
