archive/kubernetes/apps/default/adguardhome/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguardhome-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: "adguardhome"
    metallb.universe.tf/loadBalancerIPs: 192.168.2.202
  labels:
    app.kubernetes.io/part-of: adguardhome
    app.kubernetes.io/name: adguardhome
spec:
  type: LoadBalancer
  ports:
    - name: dnstcp
      protocol: TCP
      port: 53
      targetPort: dnstcp
    - protocol: TCP
      port: 3000
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/part-of: adguardhome
    app.kubernetes.io/name: adguardhome
---
apiVersion: v1
kind: Service
metadata:
  name: adguardhome-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: "adguardhome"
    metallb.universe.tf/loadBalancerIPs: 192.168.2.202
  labels:
    app.kubernetes.io/part-of: adguardhome
    app.kubernetes.io/name: adguardhome
spec:
  type: LoadBalancer
  ports:
    - name: dnsudp
      protocol: UDP
      port: 53
      targetPort: dnsdup
  selector:
    app.kubernetes.io/part-of: adguardhome
    app.kubernetes.io/name: adguardhome
