archive/kubernetes/apps/default/adguardhome/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguardhome
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "traefik"
    external-dns/is-public: "true"
spec:
  rules:
    - host: adguardhome.fadhlika.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguardhome-tcp
                port:
                  name: http
  tls:
    - secretName: adguardhome-tls
      hosts:
        - adguardhome.fadhlika.com
